Add desc message, missing qqq message and alias file
Change-Id: I1ec05a8209791bbbd4c6e0aec1336eb13dede28e

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,5 +1,6 @@
 {
 	"@metadata": {},
+	"docbookexport-desc": "Adds <code><nowiki>{{#docbook:}}</nowiki></code> parser function to create a DocBook from selected wiki pages",
 	"getdocbook": "Get DocBook",
 	"apihelp-getdocbook-summary": "Create a DocBook from a wiki page"
 }
