--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -1,4 +1,6 @@
 {
 	"@metadata": {},
+	"docbookexport-desc": "{{desc|name=DocBookExport|url=https://www.mediawiki.org/wiki/Extension:DocBookExport}}",
+	"getdocbook": "{{doc-special|Getdocbook}}",
 	"apihelp-getdocbook-summary": "{{doc-apihelp-summary|getdocbook}}"
 }
